Added quantity field to dependency
